using System;
using System.Collections.Generic;
using System.Linq;
using System.Threading.Tasks;
using DDDNetCore.Application.DTO;
using DDDNetCore.Domain.Patients;
using DDDNetCore.Application.Mappers;
using DDDNetCore.Domain;
using DDDNetCore.Domain.Users;
using DDDSample1.Domain.Shared;

namespace DDDNetCore.Application.Services
{
    public class PatientService
    {
        private readonly IUnitOfWork _unitOfWork;
        private readonly IPatientRepository _repo;

        public PatientService(IUnitOfWork unitOfWork, IPatientRepository repo)
        {
            this._unitOfWork = unitOfWork;
            this._repo = repo;
        }

        public async Task<List<PatientDto>> GetAllAsync()
        {
            var list = await this._repo.GetAllAsync();

            List<PatientDto> listDto = list.ConvertAll<PatientDto>(patient => new PatientDto
            {
                MedicalRecordNumber = patient.Id.AsString(),
                PatientName = patient.PatientName.ToString(),
                BirthDate = patient.BirthDate.ToString(),
                Gender = patient.Gender.ToString(),
                PhoneNumber = patient.PhoneNumber.ToString(),
                MedicalConditions = patient.MedicalConditions.Select(rs => rs.MedicalConditionsValue).ToList(),
                EmergencyContact = patient.EmergencyContact.ToString(),
                AppointmentHistory = patient.AppointmentHistory.Select(rs => rs.AppointmentHistoryValue).ToList(),
                Email = patient.UserEmail.ToString()
            });

            return listDto;
        }

        public async Task<PatientDto> GetByIdAsync(MedicalRecordNumber id)
        {
            var patient = await this._repo.GetByIdAsync(id);

            if (patient == null)
            {
                return null;
            }

            return new PatientDto
            {
                MedicalRecordNumber = patient.Id.AsString(),
                PatientName = patient.PatientName.ToString(),
                BirthDate = patient.BirthDate.ToString(),
                Gender = patient.Gender.ToString(),
                PhoneNumber = patient.PhoneNumber.ToString(),
                MedicalConditions = patient.MedicalConditions.Select(rs => rs.MedicalConditionsValue).ToList(),
                EmergencyContact = patient.EmergencyContact.ToString(),
                AppointmentHistory = patient.AppointmentHistory.Select(rs => rs.AppointmentHistoryValue).ToList(),
                Email = patient.UserEmail.ToString()
            };
        }

        public async Task<PatientDto> AddAsync(PatientDto dto)
        {
            var medicalRecordNumber = string.IsNullOrEmpty(dto.MedicalRecordNumber)
                ? new MedicalRecordNumber(Guid.NewGuid().ToString())
                : new MedicalRecordNumber(dto.MedicalRecordNumber);

            var medicalConditionsList = new List<MedicalConditions>();
            var appointmentHistoryList = new List<AppointmentHistory>();
            
            var patient = PatientMapper.ToDomain(dto, medicalRecordNumber, medicalConditionsList, appointmentHistoryList);

            await this._repo.AddAsync(patient);
            await this._unitOfWork.CommitAsync();

            return new PatientDto
            {
                MedicalRecordNumber = patient.Id.AsString(),
                PatientName = patient.PatientName.ToString(),
                BirthDate = patient.BirthDate.ToString(),
                Gender = patient.Gender.ToString(),
                PhoneNumber = patient.PhoneNumber.ToString(),
                MedicalConditions = patient.MedicalConditions.Select(rs => rs.MedicalConditionsValue).ToList(),
                EmergencyContact = patient.EmergencyContact.ToString(),
                AppointmentHistory = patient.AppointmentHistory.Select(rs => rs.AppointmentHistoryValue).ToList(),
                Email = patient.UserEmail.ToString()
            };
        }

        public async Task<PatientDto> UpdateAsync(PatientDto dto)
        {
            var patient = await this._repo.GetByIdAsync(new MedicalRecordNumber(dto.MedicalRecordNumber));

            if (patient == null)
                return null;

            var phoneNumber = patient.PhoneNumber.ToString();
            var emergencyContact = patient.EmergencyContact.ToString();
            var patientEmail = patient.UserEmail.ToString();
            
            // change all fields
            patient.ChangePatientName(new PatientName(dto.PatientName));
            patient.ChangePhoneNumber(new PhoneNumber(dto.PhoneNumber));
            patient.ChangeGender(new Gender(dto.Gender));
            patient.ChangeBirthDate(new BirthDate(dto.BirthDate)); 
            patient.ChangeEmergencyContact(new EmergencyContact(dto.EmergencyContact));
            
            // Send set-up email to user
            var smtpEmailService = new EmailService();
            var emailContent = $"Hello {patient.PatientName}! \n Your  contact information was changed. Now it is : phone number : {phoneNumber}, emergency contact : {emergencyContact} and email : {patientEmail}";
            var email = new Email(emailContent, patient.UserEmail.ToString(), "Changes On Your Contact Information");
            await smtpEmailService.SendEmailAsync(email);
            Console.WriteLine($"Successfully sent the email to {email.Destination}");

            await this._unitOfWork.CommitAsync();

            return new PatientDto
            {
                MedicalRecordNumber = patient.Id.AsString(),
                PatientName = patient.PatientName.ToString(),
                BirthDate = patient.BirthDate.ToString(),
                Gender = patient.Gender.ToString(),
                PhoneNumber = patient.PhoneNumber.ToString(),
                MedicalConditions = patient.MedicalConditions.Select(rs => rs.MedicalConditionsValue).ToList(),
                EmergencyContact = patient.EmergencyContact.ToString(),
                AppointmentHistory = patient.AppointmentHistory.Select(rs => rs.AppointmentHistoryValue).ToList(),
                Email = patient.UserEmail.ToString()
            };
        }

        public async Task<PatientDto> DeleteAsync(MedicalRecordNumber id)
        {
            var patient = await this._repo.GetByIdAsync(id);

            if (patient == null)
                return null;

            this._repo.Remove(patient);
            await this._unitOfWork.CommitAsync();

            return new PatientDto
            {
                MedicalRecordNumber = patient.Id.AsString(),
                PatientName = patient.PatientName.ToString(),
                BirthDate = patient.BirthDate.ToString(),
                Gender = patient.Gender.ToString(),
                PhoneNumber = patient.PhoneNumber.ToString(),
                MedicalConditions = patient.MedicalConditions.Select(rs => rs.MedicalConditionsValue).ToList(),
                EmergencyContact = patient.EmergencyContact.ToString(),
                AppointmentHistory = patient.AppointmentHistory.Select(rs => rs.AppointmentHistoryValue).ToList(),
                Email = patient.UserEmail.ToString()
            };
        }
    }
}